kube-7/nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: boiarnikov-a-hw9
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
